<resources>
    <string name="app_name">MovieFlix</string>
    <string name="get_string">Get String</string>
    <string name="get_image">Get Image</string>
    <string name="movie_search_hint">Movie Search Hint</string>
    <string name="app_label">Search Feature</string>
    <string name="search_hint">Search Fruit</string>
    <string name="search_view">Enter search</string>
    <string name="search_cinema_listings">Search Cinema Listings</string>
    <string name="test_connection">test connection</string>
    <string name="movieflix">MOVIEFLIX</string>
    <string name="search_title">SEARCH TITLE</string>
    <string name="search_movies">Search Movies</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_image">movie Image</string>
    <string name="movie_description">Movie Description</string>
    <string name="add_to_favourites">Add To Favourites</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="something_went_wrong">Oops something went wrong please try again</string>
    <string name="no_results">Sorry no results</string>
    <string name="description">Description</string>
    <string name="posters">posters</string>
    <string name="view_favourites">View Favourites</string>
    <string name="change_background_image">Change Profile Image</string>
    <string name="location_permission_granted">Permission granted to access location!</string>
    <string name="location_permission_needed">Location needed for cinema listings</string>
    <string name="no_search_results">No search results, please try again</string>
    <string name="connected">CONNECTED!</string>
    <string name="not_connected">NOT CONNECTED!</string>
    <string name="vote_average">Vote Average</string>
    <string name="showing_at">Showing at:</string>
    <string name="old_search_results">Old Search Results</string>
    <string name="no_connection">No Connection, please connect to a network and try again</string>
    <string name="no_connection_show_cached">No Connection, showing the last search results</string>
    <string name="play_video">Play Video</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="no_trailer">No trailer available</string>
    <string name="youtube_error">Youtube failed to initialise</string>
    <string name="no_favourites_saved">No favourite movies saved!</string>
    <string name="cannot_load_favourites">Could not load favourite movies at this time</string>
    <string name="search_for_cinemas">Search for Cinemas</string>
    <string name="search_for_nearby_cinemas">Search for Nearby Cinemas</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="favourites">Favourites</string>
    <string name="cinema_search">Cinema Search</string>
    <string name="cinema_listings">Cinema Listings</string>
    <string name="select_a_movie">Select a Movie</string>
    <string name="search_for_nearby">Search for nearby cinemas</string>
    <string name="enter_a_place_name_below">Enter a place name below</string>
    <string name="select_a_cinema">Select a cinema</string>
    <string name="thumbnail">Profile picture thumbnail</string>
    <string name="remove_from_favourites">Remove From Favourites</string>
    <string name="see_on_map">See On Map</string>
    <string name="no_search_results_location">No search results please check your location and connection settings</string>
    <string name="enter_search_term_cinema">Please enter a place name to search for and try again</string>
    <string name="enter_search_term_movie">Please enter a search term and try again</string>
    <string name="view_movie_description">VIEW MOVIE DESCRIPTION</string>
</resources>
